some more refactoring and error fix

--- a/WebApp/Views/LanguageSelection/MyLanguages.cshtml
+++ b/WebApp/Views/LanguageSelection/MyLanguages.cshtml
@@ -11,14 +11,14 @@
         You haven't selected any languages yet. Please select the languages you know.
     </div>
 
-    <a asp-controller="TranslatorTranslation" asp-action="Languages" class="btn btn-primary">
+    <a asp-controller="LanguageSelection" asp-action="Languages" class="btn btn-primary">
         Select languages
     </a>
 }
 else
 {
     <div class="d-flex justify-content-between align-items-center mb-2">
-        <a asp-controller="TranslatorTranslation" asp-action="Languages" class="btn btn-outline-primary btn-sm">
+        <a asp-controller="LanguageSelection" asp-action="Languages" class="btn btn-outline-primary btn-sm">
             Edit
         </a>
     </div>
