--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -63,7 +63,7 @@
     {
         <div class="text-uppercase text-secondary small mb-2">Translator</div>
         <ul class="nav nav-pills flex-column mb-3">
-            <li><a class="nav-link text-white" asp-controller="TranslatorTranslation" asp-action="MyLanguages"><i class="bi bi-translate me-2"></i> Language Selection</a></li>
+            <li><a class="nav-link text-white" asp-controller="LanguageSelection" asp-action="MyLanguages"><i class="bi bi-translate me-2"></i> Language Selection</a></li>
         </ul>
         <ul class="nav nav-pills flex-column mb-3">
             <li><a class="nav-link text-white" asp-controller="Translations" asp-action="Index"><i class="bi bi-translate me-2"></i> Translations</a></li>
