--- a/WebApp/Views/Translations/Index.cshtml
+++ b/WebApp/Views/Translations/Index.cshtml
@@ -56,3 +56,4 @@
     }
     </tbody>
 </table>
+look at the project and also stricture that response that I got from one developer and explain me structurally what it tells.
