--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -9,7 +9,7 @@
 
     <hr class="border-secondary" />
 
-    <ul class="nav nav-pills flex-column mb-auto">
+    <ul class="nav nav-pills flex-column mb-3">
         <li class="nav-item">
             <a class="nav-link text-white" asp-controller="Home" asp-action="Index">
                 <i class="bi bi-house-door me-2"></i> @Translation.Get(nameof(App.Data.Resources.Resources.Navigation_Home))
