--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -15,10 +15,12 @@ html {
 html {
   position: relative;
   min-height: 100%;
+    overflow-x: hidden;
 }
 
 body {
   margin-bottom: 60px;
+    overflow-x: hidden;
 }
 
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
@@ -28,4 +30,18 @@ body {
 
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
+}
+
+/* ADMINS INDEX TABLE CSS */
+.translations-page {
+    max-width: 1400px;   
+    min-width: 1000px; 
+    margin: 0 auto;
+}
+
+@media (max-width: 820px) {
+    .translations-page {
+        min-width: 0;
+        max-width: 100%;
+    }
 }
